Fix issues with long word dont wrap

--- a/blocks/edit/da-editor/da-editor.css
+++ b/blocks/edit/da-editor/da-editor.css
@@ -611,17 +611,6 @@ td.selectedCell {
 }
 
 /* COPY FROM PROSEMIRROR VIEW */
-.ProseMirror {
-  position: relative;
-}
-
-.ProseMirror {
-  overflow-wrap: anywhere;
-  white-space: break-spaces;
-  -webkit-font-variant-ligatures: none;
-  font-variant-ligatures: none;
-  font-feature-settings: "liga" 0; /* the above doesn't seem to work in Edge */
-}
 
 .ProseMirror pre {
   white-space: pre-wrap;
